working on scss

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -27,5 +27,6 @@
         height: $gap * 6;
         border-radius: $gap / 2;
         border: 1px solid #DDDDDD;
+        background-color: white;
     }
 }
